--- a/src/styles/bokeh.css
+++ b/src/styles/bokeh.css
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100%;
   pointer-events: none;
-  z-index: 0;
+  z-index: -2; /* Placer derrière les autres éléments mais au-dessus du background */
   overflow: hidden;
 }
 
